# TextEditor

./: .cproject  .project  CMakeLists.txt  README.MD
src/: CMakeLists.txt  text_main.cpp
src/TextEditor_classes/: CMakeLists.txt  Controller.cpp  Controller.hpp  Editor.cpp  Editor.hpp  TextContent.cpp  TextContent.hpp
